# hepara

./: .dockerignore  .gitignore  Dockerfile  GEMINI.md  README.md  main.py  pyproject.toml  streamlit_app.py  streamlit_app_cloud.py  streamlit_app_local.py
docker/: README.md  hepara-entrypoint.sh
hepara/: agent.py  prompt.py
hepara/subagents/arxiv_agent/: agent.py  prompt.py  tools.py
hepara/subagents/arxiv_tracker/: agent.py  prompt.py
hepara/subagents/citations_tracker/: agent.py  prompt.py
hepara/subagents/faq_agent/: tools.py
hepara/subagents/inspirehep_agent/: agent.py  prompt.py  tools.py
hepara/subagents/mcp_agent/: agent.py  prompt.py  subagents.py  tools.py
hepara/subagents/pdg_agent/: agent.py  prompt.py  tools.py
tests/: test_arxiv_tracker_mocked.py  test_arxiv_tracker_real.py  test_download_pdf.py  test_mcp_agent.py  test_read_paper.py
