[project]
name = "hep-ai-assistant"
version = "0.1.0"
description = "High Energy Physics AI Research Assistant"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.13"
dependencies = [
    "arxivflow>=0.2.0",
    "google-adk>=1.32.0",
    "pandas>=3.0.2",
    "python-dotenv>=1.2.2",
    "streamlit>=1.57.0",
]
