[project]
name = "HEPARA"
version = "0.1.0"
description = "High Energy Physics AI Research Assistant"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.13"
dependencies = [
    "arxivflow>=0.3.0",
    "chromadb>=1.5.9",
    "google-adk>=2.1.0",
    "google-genai>=2.6.0",
    "langchain-text-splitters>=1.1.2",
    "pandas>=3.0.2",
    "pdg>=2026.0",
    "pymupdf4llm>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "streamlit>=1.57.0",
]

[tool.uv]
override-dependencies = [
    "google-genai>=2.6.0",
]
